fix centered image side spacing when boxed

--- a/assets/scss/components/entry/_entry-image.scss
+++ b/assets/scss/components/entry/_entry-image.scss
@@ -50,7 +50,7 @@
 	border-radius: var(--entry-image-border-radius, var(--border-radius));
 }
 
-.has-image-center {
+.has-image-center:not(.has-boxed) {
 	--entry-image-link-margin-right: auto;
 	--entry-image-link-margin-left: auto;
 }
@@ -75,6 +75,11 @@
 .has-boxed.has-image-right-full {
 	--entry-image-border-radius: 0;
 	--entry-image-link-margin-bottom: 0;
+}
+
+.has-boxed.has-image-center {
+	--entry-image-link-margin-right: var(--entry-wrap-padding);
+	--entry-image-link-margin-left: var(--entry-wrap-padding);
 }
 
 .has-boxed.has-image-center .has-image-first {
